gcc/testsuite/rust/rustc/ui/parser/keyword-where-as-identifier.rs
// This file was auto-generated using 'src/etc/generate-keyword-tests.py where'

fn main() {
    let where = "foo"; // { dg-error "" "" { target *-*-* } }
}

